build_output2.txt
warning: neuro-spike-kernels@0.9.2: ✓ compiled spiking_network.cu → spiking_network_sm_120.ptx (PTX version patched to 8.5)
warning: neuro-spike-kernels@0.9.2: ✓ compiled vector_similarity.cu → vector_similarity_sm_120.ptx (PTX version patched to 8.5)
warning: neuro-spike-kernels@0.9.2: ✓ compiled satsolver.cu → satsolver_sm_120.ptx (PTX version patched to 8.5)
   Compiling neuro-spike-core v0.9.2 (/home/raulmc/ship_of_theseus_rs/neuro-spike/neuro-spike-core)
error[E0106]: missing lifetime specifier
  --> neuro-spike/neuro-spike-core/src/telemetry/nvml_telemetry.rs:19:34
   |
19 |     device: Option<nvml_wrapper::Device>,
   |                                  ^^^^^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
12 ~ pub struct NvmlTelemetryProvider<'a> {
13 |     // Rolling statistics for Z-score normalization
...
18 |     // NVML device handle
19 ~     device: Option<nvml_wrapper::Device<'a>>,
   |

error[E0603]: enum `NvmlError` is private
   --> neuro-spike/neuro-spike-core/src/telemetry/nvml_telemetry.rs:208:37
    |
208 |     NvmlError(#[from] nvml_wrapper::NvmlError),
    |                                     ^^^^^^^^^ private enum
    |
note: the enum `NvmlError` is defined here
   --> /home/raulmc/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/nvml-wrapper-0.10.0/src/lib.rs:143:40
    |
143 | use crate::error::{nvml_sym, nvml_try, NvmlError};
    |                                        ^^^^^^^^^
help: consider importing this enum instead
    |
208 |     NvmlError(#[from] nvml_wrapper::error::NvmlError),
    |                                     +++++++
help: import `NvmlError` directly
    |
208 |     NvmlError(#[from] nvml_wrapper::error::NvmlError),
    |                                     +++++++

Some errors have detailed explanations: E0106, E0603.
For more information about an error, try `rustc --explain E0106`.
error: could not compile `neuro-spike-core` (lib) due to 2 previous errors
